k8s/employees-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employees-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employees-service
  template:
    metadata:
      labels:
        app: employees-service
    spec:
      containers:
      - name: employees-container
        image: mrmonster786/rnr-employees:latest
        ports:
        - containerPort: 8003
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: employees-service
spec:
  selector:
    app: employees-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
