k8s/organization-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: organization-service
  template:
    metadata:
      labels:
        app: organization-service
    spec:
      containers:
      - name: organization-container
        image: mrmonster786/rnr-organization:latest
        ports:
        - containerPort: 8007
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: organization-service
spec:
  selector:
    app: organization-service
  ports:
    - protocol: TCP
      port: 8007
      targetPort: 8007
