k8s/recognition-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recognition-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recognition-service
  template:
    metadata:
      labels:
        app: recognition-service
    spec:
      containers:
      - name: recognition-container
        image: mrmonster786/rnr-recognition:latest
        ports:
        - containerPort: 8005
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: recognition-service
spec:
  selector:
    app: recognition-service
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
