k8s/roles-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roles-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: roles-service
  template:
    metadata:
      labels:
        app: roles-service
    spec:
      containers:
      - name: roles-container
        image: mrmonster786/rnr-roles:latest
        ports:
        - containerPort: 8002
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: roles-service
spec:
  selector:
    app: roles-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
