k8s/skooner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skooner
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: skooner
  template:
    metadata:
      labels:
        k8s-app: skooner
    spec:
      containers:
      - name: skooner
        image: ghcr.io/skooner-k8s/skooner:stable
        ports:
        - containerPort: 4654
        # Internal K8s check matches the UI path
        livenessProbe:
          httpGet:
            path: /skooner/favicon.ico
            port: 4654
          initialDelaySeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: skooner
spec:
  ports:
  - port: 4654
    targetPort: 4654
  selector:
    k8s-app: skooner
